* NEWS (user visible changes)

** Release 0.9.8 <>

   - '--descending' has  been renamed into '--reverse'

 * Release 0.9.7 <>

   - don't enforce UTF-8 output, use locale (fixes issue #11)
   - add mail threading to mu-find (using -t/--threads) (sorta fixes issue #13)
   - add header line to --format=mutt-ab (mu cfind), (fixes issue #42)
   - terminate mu view results with a form-feed marker (use --terminate) (fixes
     issue #41)
   - search X-Label: tags (fixes issue #40)
   - added toys/muile, the mu guile shells, which allows for message stats etc.
   - fix date handling (timezones)

** Release 0.9.6 <2011-05-28 Sat>

   - FreeBSD build fix
   - fix matching for mu cfind to be as expected
   - fix mu-contacts for broken names/emails
   - clear the contacts-cache too when doing a --rebuild
   - wildcard searches ('*') for fields (except for path/maildir)
   - search for attachment file names (with 'a:'/'attach:') -- also works with
     wildcards
   - remove --xquery completely; use --output=xquery instead
   - fix progress info in 'mu index'
   - display the references for a message using the 'r' character (xmu find)
   - remove --summary-len/-k, instead use --summary for mu view and mu find, and
   - support colorized output for some sub-commands (view, cfind and
     extract). Disabled by default, use --color to enable, or set env
     MU_COLORS to non-empty
   - update documentation, added more examples

** Release 0.9.5 <2011-04-25 Mon>

   - bug fix for infinite loop in Maildir detection
   - minor fixes in tests, small optimizations

** Release 0.9.4 <2011-04-12 Tue>

   - add the 'cfind' command, to search/export contact information
   - add 'flag:unread' as a synonym for 'flag:new OR NOT flag:unseen'
   - updated documentation


** Release 0.9.3 <2011-02-13 Sun>

   - don't warn about missing files with --quiet

** Release 0.9.2 <2011-02-02 Wed>

   - stricter checking of options; and options must now *follow* the sub-command