@@ -1,4 +1,4 @@
-.TH MU FIND 1 "July 2011" "User Manuals"
+.TH MU FIND 1 "November 2011" "User Manuals"
 
 .SH NAME
 
@@ -123,6 +123,7 @@ search fields and their abbreviations:
 	date,d          Date-Range
 	size,z          Message size
 	attach,a        Attachment filename
+	attmime,y       Attachment MIME-type
 	tag,x           Tag for the message (contents of the \fIX-Label\fR field)
 .fi
 
@@ -472,6 +473,23 @@ Find all unread messages with attachments:
 .nf
   $ mu find flag:attach flag:unread
 .fi
+
+
+Find all messages with PDF-attachments:
+
+.nf
+  $ mu find attmime:application/pdf
+.fi
+
+Find all messages with attached images:
+
+.nf
+  $ mu find 'attmime:image/*'
+.fi
+
+Note[1]: the argument needs to be quoted, or the shell will interpret the '*'
+Note[2]: the '*' wild card can only be used as the last (rightmost) part of a
+search term.
 
 
 .SS Integrating mu find with mail clients
